--- a/.travis.yml
+++ b/.travis.yml
@@ -28,5 +28,9 @@ matrix:
 
 before_install:
   - gem update --system
+  - chrome --version || true
+  - google-chrome --version || true
+  - chromium --version || true
+  - chromium-browser --version || true
 
 script: "bundle exec rake"
