--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,5 +47,11 @@ jobs:
           bundle config path vendor/bundle
           bundle config gemfile ${{ matrix.gemfile }}
           bundle install --jobs 4 --retry 3
+      - name: Check Chrome
+        run: |
+          chrome --version || true
+          google-chrome --version || true
+          chromium --version || true
+          chromium-browser --version || true
       - name: Run specs
         run: bundle exec rake
